--- a/public/css/style.less
+++ b/public/css/style.less
@@ -888,14 +888,15 @@ main h1 {
 }
 .flex-grid {
   display: flex;
-  min-height: 180px;
+  min-height: 20px;
+  margin-bottom: 20px;
 }
 .flex-grid div.content {
   flex: 1;
   margin: 0 20px 20px 0;
   border: 1px solid #ddd;
   background: #fff;
-    input, textarea {
+    input[type="text"], textarea {
           display: block;
           width: calc(~'100% - 16px');
           padding: 0.375rem 0.75rem;
@@ -911,7 +912,7 @@ main h1 {
           border-radius: 0.25rem;
           transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     }
-    input{
+    input[type="text"]{
       height: calc(2.25rem + 2px);
     }
     textarea{
@@ -952,15 +953,66 @@ main h1 {
       background-color: #3b4854;
       color:#fff;
     }
+    .text{
+      padding: 10px;;
+    }
+    .status{
+      margin: 8px 8px 5px 8px;
+      input{
+        margin-left:10px;
+      }
+      span{
+        margin-left:10px;
+      }
+    }
 }
 .flex-grid div:last-child {
   margin-right: 0;
 }
 .flex-grid div h2 {
-  padding: 12px 15px;
-  font-size: 16px;
-  font-weight: 300;
-  text-transform: uppercase;
-  border-bottom: 1px solid #ddd;
-  background: #fafafa;
+    padding: 12px 15px;
+    font-size: 16px;
+    font-weight: 300;
+    text-transform: uppercase;
+    border-bottom: 1px solid #ddd;
+    background: #fafafa;
+}
+.action-open-close{
+    border-top:1px solid #000;
+    .content{
+      display:none;
+      opacity: 0;
+      transition: all 1s ease;
+    }
+    .name-element{
+      margin-top: 5px;
+      opacity: 0.5;
+    }
+    &.open .content{
+      display:block;
+      opacity: 1;
+      border-top:none!important;
+    }
+    &.open .button{
+      content: ">"; 
+    }
+    &.open .name-element{
+      margin-top: 10px;
+      display:none;
+    }
+    .button{
+      content: "Открыть"; 
+      color: #333; 
+      background-color: #ddd; 
+      font-size: 90%; 
+      padding: 2px; 
+      display: block;
+      width:250px;
+      margin:0 auto;
+      left:50%;
+      text-align:center;
+      cursor: pointer;
+      position: absolute;
+    }
+
 }
