--- a/public/css/style.less
+++ b/public/css/style.less
@@ -1016,3 +1016,30 @@ main h1 {
     }
 
 }
+#cabinet-paper{
+  background-color: #ffffee;
+  padding: 8px;
+  position: relative;
+  .flex-grid{
+    position: relative;
+    opacity: 0.9;
+        .bline{
+          width:2px;
+          background-color: #ddd;
+          height:40px;
+          position: absolute;
+          left:50%;
+          bottom: -20px;
+        }
+        .edit-form{
+          display:none;
+        }
+        .edit-text{
+          cursor: pointer;
+          margin:5px;
+          float:right;
+        }
+  }
+
+}
+
