--- a/public/css/style.less
+++ b/public/css/style.less
@@ -893,7 +893,7 @@ main h1 {
 }
 .flex-grid div.content {
   flex: 1;
-  margin: 0 20px 20px 0;
+  margin: 0 0 20px 0;
   border: 1px solid #ddd;
   background: #fff;
     input[type="text"], textarea {
@@ -1041,5 +1041,14 @@ main h1 {
         }
   }
 
+}
+.draft{
+  border-top:3px solid #800000;
+}
+.pending{
+  border-top:3px solid #FFA500;
+}
+.publish{
+  border-top:3px solid #008000;
 }
 
