--- a/public/css/style.css
+++ b/public/css/style.css
@@ -893,7 +893,7 @@ main h1 {
 }
 .flex-grid div.content {
   flex: 1;
-  margin: 0 20px 20px 0;
+  margin: 0 0 20px 0;
   border: 1px solid #ddd;
   background: #fff;
 }
@@ -1040,4 +1040,13 @@ main h1 {
   cursor: pointer;
   margin: 5px;
   float: right;
+}
+.draft {
+  border-top: 3px solid #800000;
+}
+.pending {
+  border-top: 3px solid #FFA500;
+}
+.publish {
+  border-top: 3px solid #008000;
 }
