--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,6 +72,9 @@ main {
   margin: 0 0 20px 0;
   border: 1px solid #ddd;
   background: #FFFAFA;
+  -webkit-box-shadow: -4px 1px 6px -1px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: -4px 1px 6px -1px rgba(34, 60, 80, 0.2);
+  box-shadow: -4px 1px 6px -1px rgba(34, 60, 80, 0.2);
 }
 .flex-grid div.content input[type="text"],
 .flex-grid div.content textarea {
@@ -175,7 +178,7 @@ main {
   text-transform: uppercase;
   border-bottom: 1px solid #ddd;
   background: #F5F5F5;
-  opacity: .5;
+  opacity: .2;
 }
 .action-open-close {
   border-top: 1px solid #000;
@@ -217,7 +220,7 @@ main {
 }
 #cabinet-paper {
   background-color: #FFFAFA;
-  padding: 8px;
+  padding: 20px 20px 0 20px;
   position: relative;
 }
 #cabinet-paper .flex-grid {
