--- a/public/css/style.less
+++ b/public/css/style.less
@@ -92,6 +92,10 @@ main {
   margin: 0 0 20px 0;
   border: 1px solid #ddd;
   background: #FFFAFA;
+  -webkit-box-shadow: -4px 1px 6px -1px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: -4px 1px 6px -1px rgba(34, 60, 80, 0.2);
+  box-shadow: -4px 1px 6px -1px rgba(34, 60, 80, 0.2);
+
 
   input[type="text"],
   textarea {
@@ -211,7 +215,7 @@ main {
   text-transform: uppercase;
   border-bottom: 1px solid #ddd;
   background: #F5F5F5;
-  opacity: .5;
+  opacity: .2;
 }
 
 .action-open-close {
@@ -262,7 +266,7 @@ main {
 
 #cabinet-paper {
   background-color: #FFFAFA;
-  padding: 8px;
+  padding: 20px 20px 0 20px;
   position: relative;
 
   .flex-grid {
