--- a/public/css/style.css
+++ b/public/css/style.css
@@ -328,7 +328,7 @@ main {
 }
 .tabs {
   border: 1px solid #e0e0e0;
-  max-width: 350px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
