--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,410 +1,1 @@
-@charset "UTF-8";
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 300;
-  src: url(https://fonts.gstatic.com/s/lato/v24/S6u9w4BMUTPHh7USSwiPHA.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/lato/v24/S6uyw4BMUTPHjx4wWw.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 700;
-  src: url(https://fonts.gstatic.com/s/lato/v24/S6u9w4BMUTPHh6UVSwiPHA.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'FontAwesome';
-  font-style: normal;
-  font-weight: normal;
-  src: url('https://weloveiconfonts.com/api/fonts/fontawesome/fontawesome-webfont.eot');
-  src: url('https://weloveiconfonts.com/api/fonts/fontawesome/fontawesome-webfont.eot?#iefix') format('eot'), url('https://weloveiconfonts.com/api/fonts/fontawesome/fontawesome-webfont.woff') format('woff'), url('https://weloveiconfonts.com/api/fonts/fontawesome/fontawesome-webfont.ttf') format('truetype'), url('https://weloveiconfonts.com/api/fonts/fontawesome/fontawesome-webfont.svg#FontAwesomeRegular') format('svg');
-}
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-:before,
-:after {
-  display: block;
-  position: absolute;
-}
-html,
-body {
-  height: 100%;
-}
-body {
-  font: 15px/1 Lato, sans-serif;
-  color: #777;
-  background: #f5f5f5;
-}
-a {
-  cursor: pointer;
-}
-main {
-  flex: 1;
-  padding: 25px;
-  background: #f5f5f5;
-}
-/*main h1 {
-  height: 70px;
-  margin: -25px -25px 25px -25px;
-  padding: 0 25px;
-  line-height: 66px;
-  font-size: 28px;
-  font-weight: 300;
-  text-transform: uppercase;
-  border-bottom: 1px solid #ddd;
-  background: #fafafa;
-}*/
-.flex-grid {
-  display: flex;
-  min-height: 20px;
-  margin-bottom: 20px;
-}
-.flex-grid div.content {
-  flex: 1;
-  margin: 0 0 20px 0;
-  border: 1px solid #ddd;
-  background: #FFFAFA;
-  -webkit-box-shadow: -4px 1px 6px -1px rgba(34, 60, 80, 0.2);
-  -moz-box-shadow: -4px 1px 6px -1px rgba(34, 60, 80, 0.2);
-  box-shadow: -4px 1px 6px -1px rgba(34, 60, 80, 0.2);
-}
-.flex-grid div.content input[type="text"],
-.flex-grid div.content textarea {
-  display: block;
-  width: calc(100% - 16px);
-  padding: 0.375rem 0.75rem;
-  margin: 8px;
-  font-family: inherit;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #212529;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid #bdbdbd;
-  border-radius: 0.25rem;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-.flex-grid div.content input[type="text"] {
-  height: calc(4.25rem);
-}
-.flex-grid div.content textarea {
-  height: 300px;
-  resize: none;
-}
-.flex-grid div.content label {
-  display: block;
-  margin: 8px 8px 5px 8px;
-}
-.flex-grid div.content button {
-  position: relative;
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
-  border-left-width: 0;
-  display: inline-block;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #212529;
-  text-align: center;
-  vertical-align: middle;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-  background-color: #eee;
-  border: 1px solid #bdbdbd;
-  border-left-width: 1px;
-  padding: .375rem .75rem;
-  font-size: 1rem;
-  border-radius: .25rem;
-  border-top-left-radius: 0.25rem;
-  border-bottom-left-radius: 0.25rem;
-  transition: background-color 0.15s ease-in-out;
-  margin: 8px;
-}
-.flex-grid div.content button:hover {
-  background-color: #3b4854;
-  color: #fff;
-}
-.flex-grid div.content .text {
-  padding: 10px;
-}
-.flex-grid div.content .text .inner {
-  line-height: 18px;
-}
-.flex-grid div.content .status {
-  margin: 8px 8px 5px 8px;
-}
-.flex-grid div.content .status input {
-  margin-left: 10px;
-}
-.flex-grid div.content .status span {
-  margin-left: 10px;
-}
-.flex-grid div.content .panel-note {
-  padding: 3px 10px;
-  border-top: 1px solid #ddd;
-}
-.flex-grid div.content .panel-note .icon_note_param {
-  width: 16px;
-  height: 16px;
-  opacity: .5;
-  margin-right: 5px;
-}
-.flex-grid div.content .panel-note .text-value {
-  float: right;
-  font-size: 12px;
-  color: #000;
-  opacity: .5;
-}
-.flex-grid div.content .edit-text {
-  opacity: .5;
-}
-.flex-grid div:last-child {
-  margin-right: 0;
-}
-.flex-grid div h2 {
-  padding: 12px 15px;
-  font-size: 14px;
-  font-weight: 300;
-  text-transform: uppercase;
-  border-bottom: 1px solid #ddd;
-  background: #F5F5F5;
-}
-.action-open-close {
-  border-top: 1px solid #000;
-}
-.action-open-close .content {
-  display: none;
-  opacity: 0;
-  transition: all 1s ease;
-}
-.action-open-close .name-element {
-  margin-top: 5px;
-  opacity: 0.5;
-}
-.action-open-close.open .content {
-  display: block;
-  opacity: 1;
-  border-top: none !important;
-}
-.action-open-close.open .button {
-  content: ">";
-}
-.action-open-close.open .name-element {
-  margin-top: 10px;
-  display: none;
-}
-.action-open-close .button {
-  content: "Открыть";
-  color: #333;
-  background-color: #ddd;
-  font-size: 90%;
-  padding: 2px;
-  display: block;
-  width: 250px;
-  margin: 0 auto;
-  left: 50%;
-  text-align: center;
-  cursor: pointer;
-  position: absolute;
-}
-#cabinet-paper {
-  background-color: #FFFAFA;
-  padding: 20px 20px 0 20px;
-  position: relative;
-}
-#cabinet-paper .flex-grid {
-  position: relative;
-}
-#cabinet-paper .flex-grid .bline {
-  width: 2px;
-  background-color: #ddd;
-  height: 40px;
-  position: absolute;
-  left: 50%;
-  bottom: -20px;
-}
-#cabinet-paper .flex-grid .edit-form {
-  display: none;
-}
-#cabinet-paper .flex-grid .edit-text {
-  cursor: pointer;
-  margin: 5px;
-  float: right;
-  position: absolute;
-  right: 5px;
-  top: 10px;
-}
-.draft {
-  border-top: 2px solid #800000;
-}
-.pending {
-  border-top: 2px solid #ffa500;
-}
-.publish {
-  border-top: 2px solid #008000;
-}
-.circle_draft,
-.circle_pending,
-.circle_publish {
-  width: 16px;
-  height: 16px;
-  display: block;
-  float: left;
-  margin-right: 10px;
-}
-.circle_draft {
-  background: #800000;
-}
-.circle_pending {
-  background: #ffa500;
-}
-.circle_publish {
-  background: #008000;
-}
-.icon_big {
-  width: 128px;
-  height: auto;
-}
-.icon_small {
-  width: 24px;
-  height: auto;
-}
-.panel {
-  border: 1px solid #ddd;
-  padding: 10px;
-}
-.panel h2 {
-  color: #000;
-  font-size: 14px;
-}
-.panel .link {
-  margin-top: 10px;
-}
-.panel .link a {
-  color: #666;
-}
-.mm10 {
-  margin: 10px;
-}
-.net_grid_1 {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  /*grid-template-rows: repeat(6, 1fr);*/
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
-}
-.flex-parent {
-  display: flex;
-}
-.flex-child {
-  box-sizing: border-box;
-  width: 50%;
-  white-space: nowrap;
-  display: flex;
-  flex-wrap: nowrap;
-}
-.flex-child:nth-of-type(1) {
-  width: 60%;
-}
-.flex-child:nth-of-type(2) {
-  width: 40%;
-  /* background-color: #000;*/
-}
-.flex-child form {
-  width: 100%;
-}
-.flex-child .tag {
-  border: 1px solid #ddd;
-  padding: 10px;
-  -webkit-box-shadow: -4px 1px 6px -1px rgba(34, 60, 80, 0.2);
-  -moz-box-shadow: -4px 1px 6px -1px rgba(34, 60, 80, 0.2);
-  box-shadow: -4px 1px 6px -1px rgba(34, 60, 80, 0.2);
-  margin-bottom: 20px;
-}
-.flex-child .text-tag {
-  white-space: normal;
-  font-size: 12px;
-  margin-bottom: 20px;
-  text-align: justify;
-  margin-right: 20px!important;
-}
-.flex-child .bold-tag {
-  white-space: normal;
-  font-size: 12px;
-  font-weight: 600;
-  margin-bottom: 5px;
-}
-.flex-child .content-tag {
-  height: 400px;
-  overflow-y: auto;
-  scrollbar-color: #6969dd #e0e0e0;
-  scrollbar-width: thin;
-}
-.flex-child .content-tag::-webkit-scrollbar {
-  width: 10px;
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-.flex-child .content-tag::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-  background-color: #f9f9fd;
-}
-.flex-child .content-tag::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background-color: #888;
-  cursor: pointer;
-}
-.cabinet-editor {
-  margin: 0px 8px;
-}
-.tabs {
-  border: 1px solid #e0e0e0;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-}
-.tabs__nav {
-  display: flex;
-  flex-wrap: wrap;
-  list-style-type: none;
-  background: #fafafa;
-  margin: 0;
-  border-bottom: 1px solid #e0e0e0;
-}
-.tabs__btn {
-  padding: 0.5rem 0.75rem;
-  text-decoration: none;
-  color: black;
-  text-align: center;
-  flex-shrink: 0;
-  flex-grow: 1;
-  border: 1px solid transparent;
-  cursor: pointer;
-}
-.tabs__btn_active {
-  background: #e0e0e0;
-  cursor: default;
-}
-.tabs__btn:not(.tabs__btn_active):hover,
-.tabs__btn:not(.tabs__btn_active):focus {
-  background-color: #eee;
-}
-.tabs__content {
-  padding: 1rem;
-}
-.tabs__pane {
-  display: none;
-}
-.tabs__pane_show {
-  display: block;
-}
+@charset "UTF-8";@font-face{font-family:Lato;font-style:normal;font-weight:300;src:url(https://fonts.gstatic.com/s/lato/v24/S6u9w4BMUTPHh7USSwiPHA.ttf) format('truetype')}@font-face{font-family:Lato;font-style:normal;font-weight:400;src:url(https://fonts.gstatic.com/s/lato/v24/S6uyw4BMUTPHjx4wWw.ttf) format('truetype')}@font-face{font-family:Lato;font-style:normal;font-weight:700;src:url(https://fonts.gstatic.com/s/lato/v24/S6u9w4BMUTPHh6UVSwiPHA.ttf) format('truetype')}@font-face{font-family:FontAwesome;font-style:normal;font-weight:400;src:url(https://weloveiconfonts.com/api/fonts/fontawesome/fontawesome-webfont.eot);src:url(https://weloveiconfonts.com/api/fonts/fontawesome/fontawesome-webfont.eot?#iefix) format('eot'),url(https://weloveiconfonts.com/api/fonts/fontawesome/fontawesome-webfont.woff) format('woff'),url(https://weloveiconfonts.com/api/fonts/fontawesome/fontawesome-webfont.ttf) format('truetype'),url(https://weloveiconfonts.com/api/fonts/fontawesome/fontawesome-webfont.svg#FontAwesomeRegular) format('svg')}*{margin:0;padding:0;box-sizing:border-box}:after,:before{display:block;position:absolute}body,html{height:100%}body{font:15px/1 Lato,sans-serif;color:#777;background:#f5f5f5}a{cursor:pointer}main{flex:1;padding:25px;background:#f5f5f5}.flex-grid{display:flex;min-height:20px;margin-bottom:20px}.flex-grid div.content{flex:1;margin:0 0 20px;border:1px solid #ddd;background:snow;-webkit-box-shadow:-4px 1px 6px -1px rgba(34,60,80,.2);-moz-box-shadow:-4px 1px 6px -1px rgba(34,60,80,.2);box-shadow:-4px 1px 6px -1px rgba(34,60,80,.2)}.flex-grid div.content input[type=text],.flex-grid div.content textarea{display:block;width:calc(100% - 16px);padding:.375rem .75rem;margin:8px;font-family:inherit;font-size:1rem;font-weight:400;line-height:1.5;color:#212529;background-color:#fff;background-clip:padding-box;border:1px solid #bdbdbd;border-radius:.25rem;transition:border-color .15s ease-in-out,box-shadow .15s ease-in-out}.flex-grid div.content input[type=text]{height:calc(4.25rem)}.flex-grid div.content textarea{height:300px;resize:none}.flex-grid div.content label{display:block;margin:8px 8px 5px}.flex-grid div.content button{position:relative;display:inline-block;font-weight:400;line-height:1.5;color:#212529;text-align:center;vertical-align:middle;cursor:pointer;-webkit-user-select:none;-moz-user-select:none;user-select:none;background-color:#eee;border:1px solid #bdbdbd;border-left-width:1px;padding:.375rem .75rem;font-size:1rem;border-radius:.25rem;transition:background-color .15s ease-in-out;margin:8px}.flex-grid div.content button:hover{background-color:#3b4854;color:#fff}.flex-grid div.content .text{padding:10px}.flex-grid div.content .text .inner{line-height:18px}.flex-grid div.content .status{margin:8px 8px 5px}.flex-grid div.content .status input,.flex-grid div.content .status span{margin-left:10px}.flex-grid div.content .panel-note{padding:3px 10px;border-top:1px solid #ddd}.flex-grid div.content .panel-note .icon_note_param{width:16px;height:16px;opacity:.5;margin-right:5px}.flex-grid div.content .panel-note .text-value{float:right;font-size:12px;color:#000;opacity:.5}.flex-grid div.content .edit-text{opacity:.5}.flex-grid div:last-child{margin-right:0}.flex-grid div h2{padding:12px 15px;font-size:14px;font-weight:300;text-transform:uppercase;border-bottom:1px solid #ddd;background:#F5F5F5}.action-open-close{border-top:1px solid #000}.action-open-close .content{display:none;opacity:0;transition:all 1s ease}.action-open-close .name-element{margin-top:5px;opacity:.5}.action-open-close.open .content{display:block;opacity:1;border-top:none!important}.action-open-close.open .button{content:">"}.action-open-close.open .name-element{margin-top:10px;display:none}.action-open-close .button{content:"Открыть";color:#333;background-color:#ddd;font-size:90%;padding:2px;display:block;width:250px;margin:0 auto;left:50%;text-align:center;cursor:pointer;position:absolute}#cabinet-paper{background-color:snow;padding:20px 20px 0;position:relative}#cabinet-paper .flex-grid{position:relative}#cabinet-paper .flex-grid .bline{width:2px;background-color:#ddd;height:40px;position:absolute;left:50%;bottom:-20px}#cabinet-paper .flex-grid .edit-form{display:none}#cabinet-paper .flex-grid .edit-text{cursor:pointer;margin:5px;float:right;position:absolute;right:5px;top:10px}.draft{border-top:2px solid maroon}.pending{border-top:2px solid orange}.publish{border-top:2px solid green}.circle_draft,.circle_pending,.circle_publish{width:16px;height:16px;display:block;float:left;margin-right:10px}.circle_draft{background:maroon}.circle_pending{background:orange}.circle_publish{background:green}.icon_big{width:128px;height:auto}.icon_small{width:24px;height:auto}.panel{border:1px solid #ddd;padding:10px}.panel h2{color:#000;font-size:14px}.panel .link{margin-top:10px}.panel .link a{color:#666}.mm10{margin:10px}.net_grid_1{display:grid;grid-template-columns:repeat(3,1fr);grid-column-gap:0;grid-row-gap:0}.flex-parent{display:flex}.flex-child{box-sizing:border-box;width:50%;white-space:nowrap;display:flex;flex-wrap:nowrap}.flex-child:nth-of-type(1){width:60%}.flex-child:nth-of-type(2){width:40%}.flex-child form{width:100%}.flex-child .tag{border:1px solid #ddd;padding:10px;-webkit-box-shadow:-4px 1px 6px -1px rgba(34,60,80,.2);-moz-box-shadow:-4px 1px 6px -1px rgba(34,60,80,.2);box-shadow:-4px 1px 6px -1px rgba(34,60,80,.2);margin-bottom:20px}.flex-child .text-tag{white-space:normal;font-size:12px;margin-bottom:20px;text-align:justify;margin-right:20px!important}.flex-child .bold-tag{white-space:normal;font-size:12px;font-weight:600;margin-bottom:5px}.flex-child .content-tag{height:400px;overflow-y:auto;scrollbar-color:#6969dd #e0e0e0;scrollbar-width:thin}.flex-child .content-tag::-webkit-scrollbar{width:10px;box-shadow:inset 0 0 6px rgba(0,0,0,.3)}.flex-child .content-tag::-webkit-scrollbar-track{-webkit-box-shadow:inset 0 0 6px rgba(0,0,0,.2);border-radius:10px;background-color:#f9f9fd}.flex-child .content-tag::-webkit-scrollbar-thumb{border-radius:10px;background-color:#888;cursor:pointer}.cabinet-editor{margin:0 8px}.tabs{border:1px solid #e0e0e0;width:100%;margin-left:auto;margin-right:auto}.tabs__nav{display:flex;flex-wrap:wrap;list-style-type:none;background:#fafafa;margin:0;border-bottom:1px solid #e0e0e0}.tabs__btn{padding:.5rem .75rem;text-decoration:none;color:#000;text-align:center;flex-shrink:0;flex-grow:1;border:1px solid transparent;cursor:pointer}.tabs__btn_active{background:#e0e0e0;cursor:default}.tabs__btn:not(.tabs__btn_active):focus,.tabs__btn:not(.tabs__btn_active):hover{background-color:#eee}.tabs__content{padding:1rem}.tabs__pane{display:none}.tabs__pane_show{display:block}.menu-main{list-style:none;margin:10px 0 5px;padding:15px 0 5px;text-align:center;background:#fff}.menu-main li{display:inline-block}.menu-main li:after{content:"|";color:#606060;display:inline-block;vertical-align:top}.menu-main li:last-child:after{content:none}.menu-main a{text-decoration:none;font-family:'Ubuntu Condensed',sans-serif;letter-spacing:2px;position:relative;padding-bottom:20px;margin:0 34px 0 30px;font-size:17px;text-transform:uppercase;display:inline-block;transition:color .2s}.menu-main a,.menu-main a:visited{color:#9d999d}.menu-main a.current,.menu-main a:hover{color:#ff4b2b}.menu-main a:after,.menu-main a:before{content:"";position:absolute;height:4px;top:auto;right:50%;bottom:-5px;left:50%;background:#ff4b2b;transition:.8s}.menu-main .current:before,.menu-main a:hover:before{left:0}.menu-main .current:after,.menu-main a:hover:after{right:0}@media (max-width:550px){.menu-main{padding-top:0}.menu-main li{display:block}.menu-main li:after{content:none}.menu-main a{padding:25px 0 20px;margin:0 30px}}
